alignment tweaks and persistent highlight when meni clicked, plus menu button no longer an input item

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/EventTile.css
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/EventTile.css
@@ -22,8 +22,8 @@ limitations under the License.
 }
 
 .mx_EventTile_avatar {
-    padding-left: 11px;
-    padding-right: 24px;
+    padding-left: 7px;
+    padding-right: 28px;
     margin-top: -6px;
     float: left;
     position: relative;
@@ -59,7 +59,7 @@ limitations under the License.
     white-space: nowrap;
     color: #acacac;
     font-size: 11px;
-    left: 12px;
+    left: 8px;
     top: 8px;
     position: absolute;
 }
@@ -89,7 +89,9 @@ limitations under the License.
     background-color: #f7f7f7;
 }
 
-.mx_EventTile:hover .mx_EventTile_line {
+.mx_EventTile:hover .mx_EventTile_line,
+.mx_EventTile.menu .mx_EventTile_line
+{
     background-color: #f7f7f7;
 }
 
@@ -139,12 +141,15 @@ limitations under the License.
     text-decoration: none;
 }
 
-.mx_EventTile_last .mx_MessageTimestamp {
+.mx_EventTile_last .mx_MessageTimestamp,
+.mx_EventTile:hover .mx_MessageTimestamp,
+.mx_EventTile.menu .mx_MessageTimestamp
+{
     visibility: visible;
 }
 
-.mx_EventTile:hover .mx_MessageTimestamp {
-    visibility: visible;
+.mx_EventTile_selected .mx_MessageTimestamp {
+    left: 3px;
 }
 
 .mx_EventTile_editButton {
@@ -155,11 +160,9 @@ limitations under the License.
     right: 6px;
 }
 
-.mx_EventTile:hover .mx_EventTile_editButton {
-    visibility: visible;
-}
-
-.mx_EventTile.menu .mx_EventTile_editButton {
+.mx_EventTile:hover .mx_EventTile_editButton,
+.mx_EventTile.menu .mx_EventTile_editButton
+{
     visibility: visible;
 }
 
